# glrt

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt  color_sphere.cpp  rocket_scene.cpp  simple_cube.cpp  transforms.cpp
examples/resources/: cubes.mtl  grass.mtl  launchpad.mtl  lever.mtl  rocket.mtl
include/: animation.hpp  camera.hpp  face.hpp  glrt.hpp  keyframe.hpp  light.hpp  material.hpp  matrix.hpp  matrix4.hpp  matrix4x1.hpp  mesh.hpp  model.hpp  transform.hpp  types.hpp  vector.hpp  vertex.hpp
src/: animation.cpp  camera.cpp  face.cpp  glrt.cpp  keyframe.cpp  light.cpp  material.cpp  matrix4.cpp  matrix4x1.cpp  mesh.cpp  model.cpp  transform.cpp  vertex.cpp
